# pgmicro

./: .gitignore  .rp.yml  AGENTS.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.antithesis  Makefile  README.md  VOUCHED.td  dist-workspace.toml  pyproject.toml
.config/: nextest.toml
.github/: fossier.toml  labeler.yml
.github/workflows/: antithesis-schedule.yml  antithesis.yml  build-sim.yml  build-sqlancer.yml  c-compat.yml  claude.yml  conformance.yml  dotnet-publish.yml  dotnet-test.yml  elle.yml  fossier.yml  fuzz.yml  go.yml  java-publish.yml  java.yml  napi.yml  perf_nightly.yml  pgmicro-ci.yml  pgmicro-napi.yml  pgmicro-publish.yml  publish-cli-npm.yml  python.yml  react-native.yml  rust.yml  rust_perf.yml  sqltest.yml  stack-sizes.yml  stale.yml  turso-serverless.yml
bindings/go/: bindings_db.go  driver_db.go  driver_db_test.go  go.mod  go.sum
bindings/java/: gradle.properties
bindings/javascript/: Cargo.toml  README.md  package-lock.json  package.json
bindings/javascript/docs/: API.md
bindings/javascript/perf/: package-lock.json  package.json
bindings/javascript/src/: browser.rs  lib.rs
bindings/javascript/sync/src/: lib.rs
bindings/python/: SQLALCHEMY_DIALECT.md  pyproject.toml  requirements-dev.txt
bindings/react-native/: package-lock.json  package.json
bindings/rust/: Cargo.toml
bindings/rust/examples/: example.rs
bindings/rust/src/: lib.rs  sync.rs
bindings/rust/tests/: integration_tests.rs
bindings/tcl/: Makefile  turso_tcl.c
cli/: Cargo.toml  app.rs  input.rs  read_state_machine.rs  sync_server.rs
cli/tests/: non_interactive_exit_code.rs
core/: Cargo.toml  build.rs  connection.rs  error.rs  function.rs  lib.rs  multiprocess_tests.rs  pg_catalog.rs  pg_dispatch.rs  pragma.rs  progress.rs  schema.rs  state_machine.rs  statement.rs  turso_types_vtab.rs  types.rs  util.rs
core/benches/: struct_union_benchmark.rs  struct_union_profile.rs  triggers.rs
core/functions/: postgres.rs
core/incremental/: aggregate_operator.rs  compiler.rs  cursor.rs  expr_compiler.rs  view.rs
core/index_method/: fts.rs  mod.rs  toy_vector_sparse_ivf.rs
core/io/: clock.rs  completions.rs  io_uring.rs  memory.rs  mod.rs  unix.rs  win_iocp.rs  windows.rs
core/json/: jsonb.rs  path.rs  vtab.rs
core/mvcc/: cursor.rs  mod.rs  yield_hooks.rs  yield_points.rs
core/mvcc/database/: checkpoint_state_machine.rs  mod.rs  tests.rs
core/mvcc/persistent_storage/: logical_log.rs  mod.rs
core/numeric/: nonnan.rs
core/storage/: btree.rs  database.rs  encryption.rs  journal_mode.rs  mod.rs  pager.rs  shared_wal_coordination.rs  sqlite3_ondisk.rs  wal.rs
core/translate/: aggregation.rs  alter.rs  analyze.rs  attach.rs  collate.rs  compound_select.rs  delete.rs  display.rs  expr.rs  fkeys.rs  group_by.rs  index.rs  insert.rs  integrity_check.rs  logical.rs  mod.rs  order_by.rs  plan.rs  planner.rs  pragma.rs  result_row.rs  schema.rs  select.rs  stmt_journal.rs  subquery.rs  transaction.rs  trigger.rs  trigger_exec.rs  update.rs  upsert.rs  vacuum.rs  view.rs  window.rs
core/translate/emitter/: delete.rs  gencol.rs  mod.rs  select.rs  update.rs
core/translate/main_loop/: body.rs  close.rs  hash.rs  init.rs  open.rs  seek.rs
core/translate/optimizer/: access_method.rs  constraints.rs  join.rs  mod.rs  multi_index.rs  order.rs  unnest.rs
core/vdbe/: affinity.rs  array.rs  builder.rs  execute.rs  explain.rs  hash_table.rs  insn.rs  metrics.rs  mod.rs  sorter.rs  vacuum.rs  value.rs
docs/: javascript-api-reference.md  manual.md
docs/sql-reference/: data-types.mdx  experimental-features.mdx  multiprocess-access.mdx  preview.sh
examples/go/: README.md
examples/react-native/: eslint.config.js  package-lock.json  package.json
macros/src/: lib.rs  test.rs
npm/: build.sh
npm/darwin-arm64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/pgmicro/: cli.js  compat.test.ts  compat.ts  index.js  package.json  promise.test.ts  promise.ts  tsconfig.json
parser/src/: ast.rs  error.rs  lexer.rs  parser.rs
parser_pg/src/: lib.rs  translator.rs
perf/memory/: Cargo.toml  analyze-dhat.py
perf/memory/src/: main.rs  measure.rs
perf/memory/src/profile/: checkpoint.rs  insert.rs  mixed.rs  mod.rs  read.rs  scan.rs  series_blob.rs
perf/tpc-c/: .gitignore  README.md  add_fkey_idx_sqlite.sql  create_table_sqlite.sql  run_bench.sh
pgmicro/: Cargo.toml  README.md  TODO.md  build.rs
pgmicro/src/: main.rs
pgmicro/tests/: pgmicro.rs
scripts/: pypi-cleanup  update-version.py
sdk-kit/: Cargo.toml
sdk-kit/src/: rsapi.rs
serverless/javascript/: AGENT.md  README.md  package-lock.json  package.json  tsup.config.ts
sqlite3/include/: sqlite3.h
sqlite3/src/: lib.rs
sync/engine/: Cargo.toml
sync/engine/src/: database_replay_generator.rs  database_sync_engine.rs  database_sync_lazy_storage.rs  database_sync_operations.rs  database_tape.rs
sync/sdk-kit/: Cargo.toml  turso_sync.h
sync/sdk-kit/src/: bindings.rs  rsapi.rs
testing/concurrent-simulator/: Cargo.toml  README.md  io.rs  lib.rs  main.rs  multiprocess.rs  operations.rs  properties.rs  protocol.rs  regression_tests.rs  regression_tests_cross_platform.rs  worker.rs  yield_injection.rs
testing/simulator/: Cargo.toml
testing/simulator/model/: interactions.rs
testing/simulator/runner/: io.rs
testing/simulator/runner/memory/: io.rs  statement_abandon.rs
testing/simulator/simulator-docker-runner/: Dockerfile.simulator
testing/stress/: main.rs
tests/: Cargo.toml
tests/fuzz/: mod.rs  savepoint.rs  temp_tables.rs
tests/integration/: attach.rs  common.rs  mod.rs  mvcc.rs  query_timeout.rs  queued_io.rs  stmt_readonly.rs  trigger.rs
tests/integration/index_method/: mod.rs
tests/integration/postgres/: dialect.rs  domain.rs  mod.rs  parse_edge_cases.rs  type_aliases.rs  update_from.rs
tests/integration/query_processing/: encryption.rs  mod.rs  test_ddl.rs  test_ephemeral_cleanup.rs  test_read_path.rs  test_schema_updated.rs  test_transactions.rs  test_vacuum.rs  test_write_path.rs
tests/integration/wal/: test_wal.rs
(+206 files in other folders)
