# Copyright 2023 the Limbo authors. All rights reserved. MIT license.

[package]
authors.workspace = true
default-run = "tursodb"
description = "The Turso interactive SQL shell"
edition.workspace = true
license.workspace = true
name = "turso_cli"
repository.workspace = true
version.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "tursodb"
path = "main.rs"

[dependencies]
anyhow.workspace = true
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { version = "=4.5.47", features = ["unstable-dynamic"] }
comfy-table = "7.1.4"
csv = "1.3.1"
ctrlc = "3.4.4"
dirs = "5.0.1"
env_logger = { workspace = true }
libc = "0.2.172"
turso_core = { workspace = true, default-features = true, features = [
    "cli_only",
    "conn_raw_api",
    "fs",
	"fts",
] }
turso_sync_engine = { workspace = true }
limbo_completion = { workspace = true, features = ["static"] }
miette = { workspace = true, features = ["fancy"] }
nu-ansi-term = { version = "0.50.1", features = [
    "serde",
    "derive_serde_style",
] }
rustyline = { version = "15.0.0", default-features = true, features = [
    "derive",
] }
shlex = "1.3.0"
syntect = { git = "https://github.com/trishume/syntect.git", rev = "64644ffe064457265cbcee12a0c1baf9485ba6ee", default-features = false, features = ["default-fancy"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml = { version = "0.8.20", features = ["preserve_order"] }
schemars = { version = "0.8.22", features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
toml_edit = { version = "0.22.24", features = ["serde"] }
serde_json = "1.0"
termimad = "0.30"
include_dir = "0.7"
rand = "0.8"
mimalloc = { workspace = true, optional = true }
prost = "0.14.1"
roaring = "0.11.2"
bytes = "1.11.1"
itertools.workspace = true
turso_parser_pg = { workspace = true }
async-trait = "0.1"
futures = { workspace = true }
pgwire = "0.36"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal"] }

[features]
default = ["io_uring", "mimalloc", "experimental_win_iocp"]
io_uring = ["turso_core/io_uring"]
experimental_win_iocp = ["turso_core/experimental_win_iocp"]
tracing_release = ["turso_core/tracing_release"]
mimalloc = ["dep:mimalloc"]
fts = ["turso_core/fts"]
mvcc_repl = []

[build-dependencies]
syntect = { git = "https://github.com/trishume/syntect.git", rev = "64644ffe064457265cbcee12a0c1baf9485ba6ee", default-features = false, features = ["default-fancy"] }
include_dir = "0.7"
