[package]
name = "pgmicro"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "pgmicro — PostgreSQL-compatible micro database CLI"

[[bin]]
name = "pgmicro"
path = "src/main.rs"

[dependencies]
turso_core = { workspace = true, default-features = true, features = [
    "cli_only",
    "conn_raw_api",
    "fs",
    "fts",
    "default-postgres",
] }
turso_parser_pg = { workspace = true }
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
comfy-table = "7.1.4"
dirs = "5.0.1"
rustyline = { version = "15.0.0", default-features = true, features = ["derive"] }
syntect = { git = "https://github.com/trishume/syntect.git", rev = "64644ffe064457265cbcee12a0c1baf9485ba6ee", default-features = false, features = ["default-fancy"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
nu-ansi-term = { version = "0.50.1", features = ["serde", "derive_serde_style"] }
toml = { version = "0.8.20", features = ["preserve_order"] }
schemars = { version = "0.8.22", features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
toml_edit = { version = "0.22.24", features = ["serde"] }
serde_json = "1.0"
limbo_completion = { workspace = true, features = ["static"] }
async-trait = "0.1"
futures = { workspace = true }
pgwire = "0.36"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal"] }
cfg-if = { workspace = true }
ctrlc = "3.4.4"
libc = "0.2.172"
shlex = "1.3.0"
clap_complete = { version = "=4.5.47", features = ["unstable-dynamic"] }
itertools.workspace = true
mimalloc = { workspace = true, optional = true }

[features]
default = ["io_uring", "mimalloc"]
io_uring = ["turso_core/io_uring"]
mimalloc = ["dep:mimalloc"]

[build-dependencies]
syntect = { git = "https://github.com/trishume/syntect.git", rev = "64644ffe064457265cbcee12a0c1baf9485ba6ee", default-features = false, features = ["default-fancy"] }
include_dir = "0.7"
