[package]
name = "core_tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration & fuzz tests"

[lib]
path = "lib.rs"

[[test]]
name = "integration_tests"
path = "integration/mod.rs"

[[test]]
name = "fuzz_tests"
path = "fuzz/mod.rs"

[dependencies]
anyhow.workspace = true
env_logger = { workspace = true }
turso_core = { workspace = true, features = ["conn_raw_api"] }
turso_sdk_kit = { path = "../sdk-kit" }
turso = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rusqlite.workspace = true
tempfile = { workspace = true }
log = "0.4.22"
assert_cmd = "^2"
rand_chacha = { workspace = true }
rand = { workspace = true }
zerocopy = "0.8.26"
ctor = "0.5.0"
twox-hash = "2.1.1"
sql_generation = { path = "../sql_generation" }
turso_parser = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
turso-dbhash.workspace = true

[dev-dependencies]
similar-asserts.workspace = true
serial_test = { version = "3", features = ["file_locks"] }
test-log = { version = "0.2.17", features = ["trace"] }
turso_macros.workspace = true

[features]
default = ["test_helper", "fts", "io_uring"]
checksum = ["turso_core/checksum"]
test_helper = ["turso_core/test_helper"]
fts = ["turso_core/fts"]
io_uring = ["turso_core/io_uring"]
win_iocp = ["turso_core/experimental_win_iocp"]
pure-rust-crypto = ["turso_core/pure-rust-crypto"]
