# Copyright 2025 the Turso authors. All rights reserved. MIT license.

[package]
name = "turso_whopper"
version.workspace = true
authors.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "The Turso deterministic simulator"
publish = false

[lib]
name = "turso_whopper"
path = "lib.rs"

[[bin]]
name = "turso_whopper"
path = "main.rs"

[[test]]
name = "regression_tests"
path = "regression_tests.rs"

[[test]]
name = "regression_tests_cross_platform"
path = "regression_tests_cross_platform.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
memmap2 = "0.9"
rand = { workspace = true }
rand_chacha = { workspace = true }
sql_generation = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
turso_core = { workspace = true, features = ["simulator", "fs", "experimental_win_iocp"]}
turso_parser = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = "0.4.3"
twox-hash = { version = "2.1.1", optional = true }

[features]
checksum = ["turso_core/checksum", "twox-hash"]
