# Copyright 2024 the Limbo authors. All rights reserved. MIT license.

[package]
name = "limbo_sim"
default-run = "limbo_sim"
version.workspace = true
authors.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "The Limbo deterministic simulator"
publish = false

[lints]
workspace = true

[[bin]]
name = "limbo_sim"
path = "main.rs"

[[bin]]
name = "plan_to_test"
path = "plan_to_test.rs"

[dependencies]
turso_core = { workspace = true, features = [
    "simulator",
    "io_uring",
    "experimental_win_iocp",
] }
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true, default-features = false, features = [
    "unicode",
] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
notify = "8.0.0"
rusqlite.workspace = true
dirs = "6.0.0"
chrono = { workspace = true, default-features = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
tempfile.workspace = true
hex = { workspace = true }
itertools = { workspace = true }
sql_generation = { workspace = true }
turso_parser = { workspace = true }
schemars = { workspace = true }
garde = { workspace = true, features = ["derive", "serde"] }
json5 = { version = "0.4.1" }
strum = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock"] }
indexmap = { workspace = true }
either = "1.15.0"
similar = { workspace = true }
similar-asserts = { workspace = true }
bitmaps = { workspace = true }
bitflags.workspace = true
derive_builder = "0.20.2"
turso_macros = { workspace = true }
